@@ -417,7 +417,7 @@ name|Version
 name|matchVersion
 parameter_list|,
 name|String
-index|[]
+modifier|...
 name|stopwords
 parameter_list|)
 block|{
