@@ -179,7 +179,7 @@ argument_list|()
 argument_list|)
 return|;
 block|}
-comment|/**     * Quick and dirty convenience method that instantiates an instance with     * "good defaults" and uses it to test the CacheEntry[]    * @see #check    */
+comment|/**     * Quick and dirty convenience method that instantiates an instance with     * "good defaults" and uses it to test the CacheEntrys    * @see #check    */
 DECL|method|checkSanity
 specifier|public
 specifier|static
@@ -188,7 +188,7 @@ index|[]
 name|checkSanity
 parameter_list|(
 name|CacheEntry
-index|[]
+modifier|...
 name|cacheEntries
 parameter_list|)
 block|{
@@ -228,7 +228,7 @@ index|[]
 name|check
 parameter_list|(
 name|CacheEntry
-index|[]
+modifier|...
 name|cacheEntries
 parameter_list|)
 block|{
@@ -1516,7 +1516,7 @@ name|String
 name|msg
 parameter_list|,
 name|CacheEntry
-index|[]
+modifier|...
 name|entries
 parameter_list|)
 block|{
